--- a/css/jquery.insects.css
+++ b/css/jquery.insects.css
@@ -1,5 +1,5 @@
 .jq-insect {
-	background-color: #000;
-	width: 10px;
-	height: 10px;
+	background-image: url('../images/insect1.png');
+	width: 30px;
+	height: 44px;
 }
