--- a/css/jquery.insects.css
+++ b/css/jquery.insects.css
@@ -3,3 +3,9 @@
 	width: 30px;
 	height: 44px;
 }
+
+.jq-insect-dead {
+	background-image: url('../images/insect1_dead.png');
+	width: 30px;
+	height: 44px;
+}
